# androidnative

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/ind/tmxdev/nativeandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CApplication.cpp  CApplication.h  CHashMap.cpp  CHashMap.h  CMakeLists.txt  CRenderer.cpp  CRenderer.h  PerformanceTracker.cpp  PerformanceTracker.h  defines.h  native-lib.cpp  native-lib.h
app/src/main/java/ind/tmxdev/nativeandroid/: MainActivity.java  NativeRenderer.java  NativeSurface.java
app/src/main/res/raw/: fragment.glsl  vertex.glsl
app/src/test/java/ind/tmxdev/nativeandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
